Work in progress on user service.